# Manga-Translator-Extension

./: .gitignore  AGENTS.md  Dockerfile  README.md  setup.bat  start-backend.bat
backend/: config.py  main.py  pyproject.toml
backend/core/: config.py  outside_text_processor.py  pipeline.py  validation.py
backend/core/ml/: model_manager.py
backend/core/services/: translation.py
backend/endpoints/: translate.py
backend/pipeline/: wrapper.py
docs/: API.md  README.vi.md  README.zh.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/_locales/en/: messages.json
extension/public/_locales/ja/: messages.json
extension/public/_locales/ko/: messages.json
extension/public/_locales/vi/: messages.json
extension/public/_locales/zh_CN/: messages.json
extension/public/icons/: create_icons.cjs  create_icons.py
extension/src/background/: index.ts
extension/src/content-script/: index.ts  styles.css
extension/src/popup/: index.html  index.ts
extension/src/shared/: constants.ts  i18n.ts  types.ts
